fix popper.js in webpack

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import '~bootstrap/scss/bootstrap';
+@import '~@fortawesome/fontawesome-free';
 // Import Custom SB Admin 2 Mixins and Components
 @import "mixins.scss";
 @import "global.scss";
