--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 @import '~bootstrap/scss/bootstrap';
-@import '~@fortawesome/fontawesome-free';
+@import '~font-awesome/scss/font-awesome.scss';
 // Import Custom SB Admin 2 Mixins and Components
 @import "mixins.scss";
 @import "global.scss";
