--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,8 @@
 @import 'variables';
 @import '~bootstrap/scss/bootstrap';
 @import '~font-awesome/scss/font-awesome.scss';
+// resources/assets/sass/app.scss
+@import '~jquery-ui/themes/base/all.css';
 // Import Custom SB Admin 2 Mixins and Components
 @import "mixins.scss";
 @import "global.scss";
