--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,18 +1,8 @@
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
 @import 'variables';
+
+// Bootstrap
 @import '~bootstrap/scss/bootstrap';
-@import '~font-awesome/scss/font-awesome.scss';
-// resources/assets/sass/app.scss
-@import '~jquery-ui/themes/base/all.css';
-// Import Custom SB Admin 2 Mixins and Components
-@import "mixins.scss";
-@import "global.scss";
-@import "utilities.scss";
-// Custom Components
-@import "dropdowns.scss";
-@import "navs.scss";
-@import "buttons.scss";
-@import "cards.scss";
-@import "charts.scss";
-@import "login.scss";
-@import "error.scss";
-@import "footer.scss";
