--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,7 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import '~startbootstrap-sb-admin-2/css/sb-admin-2.css';
